# aegis-rag-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/eval/: sample_eval.jsonl
data/seed/: security_notes.md
src/aegis_rag_lab/: api.py  cli.py  config.py  deps.py  logging.py  main.py
src/aegis_rag_lab/eval/: harness.py
src/aegis_rag_lab/rag/: chunking.py  decompose.py  embeddings.py  graph.py  guardrails.py  ingestion.py  llm.py  models.py  pipeline.py  reranker.py  retrieval.py  service.py  vector_store.py
tests/: conftest.py  test_health.py  test_query.py
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  index.css
