[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-rag-lab"
version = "0.1.0"
description = "Agentic RAG lab with evals and guardrails."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "@dSofikitis" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "langchain>=0.2",
  "langgraph>=0.2",
  "openai>=1.30",
  "psycopg[binary]>=3.1",
  "pgvector>=0.3",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[project.scripts]
aegis = "aegis_rag_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
